<resources>
    <string name="app_name" translatable="false">MADT1026</string>
    <string name="notes_text" translatable="false">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="save_and_close">Save and close</string>
    <string name="note_text" translatable="false">Note text</string>
    <string name="note_title" translatable="false">Note title</string>
    <string name="msg_last_saved_note">Last saved note</string>
    <string name="remove_note">Remove note</string>
    <string name="update_note">Update note</string>
    <string name="sec_add_note" translatable="false">Secondary menu item</string>
    <string name="select_update_note" translatable="false">Choose note to update</string>
    <string name="select_delete_note">Choose note to delete</string>
    <string name="dunno" translatable="false">Dunno</string>
    <string name="landscape_update" translatable="false">Landscape update</string>
    <string name="msg_removed_clicked" translatable="false">Remove Clicked</string>
    <string name="msg_updated_clicked" translatable="false">Update Clicked</string>
    <string name="msg_dunno_clicked" translatable="false">Dunno Clicked</string>
    <string name="discard_changes">Discard changes</string>
    <string name="empty_title_introduced" translatable="false">Title cannot be empty!</string>
    <string name="empty_note_introduced" translatable="false">Note content cannot be empty!</string>
    <string name="back" translatable="false">Back</string>
    <string name="existing_title" translatable="false">Title already existing</string>

</resources>