<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteNoteActivity">

    <TextView
        android:id="@+id/activity_note"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/select_delete_note"
        android:textSize="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/remove_notes_lv"
        android:layout_width="410dp"
        android:layout_height="590dp"
        android:layout_marginTop="76dp"
        android:background="#4CAF50"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_note" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="onSaveRemovesButtonClicked"
        android:text="@string/save_and_close"
        app:layout_constraintBottom_toTopOf="@+id/remove_notes_lv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_note"
        app:layout_constraintVertical_bias="0.642" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="600dp"
        android:text="@string/discard_changes"
        android:onClick="onDiscardRemovesButtonClicked"
        app:layout_constraintBottom_toBottomOf="@+id/remove_notes_lv"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>