<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateNoteActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/note_title"
        app:layout_constraintBottom_toTopOf="@+id/edTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="397dp"
        android:layout_height="46dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/lblTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="9dp"
        android:text="@string/note_text"
        app:layout_constraintBottom_toTopOf="@+id/edBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edBody"
        android:layout_width="396dp"
        android:layout_height="153dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveAndClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_note"
        android:onClick="onBtnSaveAndCloseClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edBody" />


</androidx.constraintlayout.widget.ConstraintLayout>